Fix pagination overflow on mobile

--- a/assets/sass/common/gutenberg.scss
+++ b/assets/sass/common/gutenberg.scss
@@ -1,91 +1,88 @@
-.gutenberg-content > *{
-    margin-left: 1.5rem;
-    margin-right: 1.5rem;
-}
-
-.alignfull{
+.entry-content > *{
+    width: calc(100% - 3rem);
     margin-left: auto;
     margin-right: auto;
 }
 
-.gutenberg-content p,
-.gutenberg-content ul,
-.gutenberg-content ol,{
-    margin-top: 0;
-    margin-bottom: 1.5em;
+/*
+* Fix width on list pages
+*/
+.blog .entry-content > *,
+.archive .entry-content > *,
+.search .entry-content > *{
+    width: initial;
 }
 
-/*.wp-block-image,
-.wp-block-gallery,
-.wp-block-video,
-.wp-block-quote,
-.wp-block-text-columns,
-.wp-block-cover-text,
-.wp-block-pullquote,
-.gutenberg-content figure,
-.gutenberg-content blockquote,
-.gutenberg-content pre,
-.gutenberg-content table,
-.wp-block-ttfb-pillar*/
-[class*="wp-block"]{
+.entry-content .alignfull {
     margin-top: 3rem;
     margin-bottom: 3rem;
-    
+    width: 100vw;
+    margin-left:    calc(50% - 50vw);
+    margin-right:   calc(50% - 50vw);
 }
 
-.gutenberg-content figure{ 
+.alignwide {
+    margin-top: 3rem;
+    margin-bottom: 3rem;
+}
+
+/*
+* Center small image 
+*/
+.wp-block-image.alignfull img,
+.wp-block-image.alignwide img,
+.wp-block-image.aligncenter img, // Fix img alignment
+.wp-block-gallery.alignfull img, // Fix img alignment
+.wp-block-gallery.alignwide img{ // Fix img alignment
+    margin-left: auto;
+    margin-right: auto;
+}
+
+/*
+* Fix separator block alignment
+*/
+.wp-block-separator{ max-width: 100%;}
+
+
+/*
+* Fix wide blocks on archives
+*/
+.blog .alignfull,
+.blog .alignwide,
+.archive .alignfull,
+.archive .alignwide,
+.search .alignfull,
+.search .alignwide{
     max-width: 100%;
 }
 
-.gutenberg-content *.alignfull{
-  max-width: 100%;
+@media #{$breakpoint-lg} {
+
+    .entry-content > *{
+        width: auto;
+        margin-left: 0;
+        margin-right: 0;
+    }
+
+    .entry-content .alignwide {
+        margin-left:    calc(25% - 25vw);
+        margin-right:   calc(25% - 25vw);
+        width:          auto;
+        max-width:      1000%;
+    }
+
+    /*
+    * Gallery alignment
+    */
+    .wp-block-gallery{
+        margin-left: -8px;
+        margin-right: -8px;
+    }
 }
 
-.gutenberg-content .alignfull > img{
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.wp-block-pullquote{
-    border-top: none;
-    border-bottom: none;
-    text-align: left;
-    border-left: 3px solid rgba(0,0,0,0.8);
-    padding: 0 2rem;
-    
-}
-
-.wp-block-button{ 
-    background-color: inherit;
-    display: block;
-    height: auto;
-    padding: 0;
-}
-
-.wp-block-button a{
-    @extend .btn;
-}
-
-.wp-block-column >:first-child{ margin-top: 0; }
-.wp-block-column >:last-child{ margin-bottom: 0; }
-
-.wp-block-gallery{ padding-left: 0; }
-.wp-block-gallery figcaption{
-    margin: 0;
-    bottom: 0;
-    transition: opacity 0.4s ease;
-    opacity: 0;
-    padding: 5px;
-}
-
-.wp-block-gallery figure:hover figcaption{ opacity: 1; }
-
-.wp-block-button .wp-block-button__link{ 
-    border-color: transparent;
-    transition: opacity 0.2s ease;
-}
-.wp-block-button .wp-block-button__link:hover{ opacity: 0.8; }
-
+/*
+* text Columns
+*/
 @media( max-width: 40em) {
     .wp-block-text-columns{ 
         display: block;
@@ -97,68 +94,12 @@
     }
 }
 
-@media #{$breakpoint-md} {
-    .gutenberg-content p,
-    .gutenberg-content p,
-    .gutenberg-content h1,
-    .gutenberg-content h2,
-    .gutenberg-content h3,
-    .gutenberg-content h4,
-    .gutenberg-content h5,
-    .gutenberg-content h6,
-    .gutenberg-content h6,
-    .gutenberg-content blockquote,
-    .gutenberg-content pre,
-    .gutenberg-content table,
-    .gutenberg-content figure,
-    .gutenberg-content .alert,
-    .gutenberg-content ul,
-    .gutenberg-content ol,
-    .gutenberg-content hr,
-    .gutenberg-content .alert_shortcode,
-    .gutenberg-content .overflow-auto,
-    [class*="wp-block"],
-    //.wp-block-image,
-    //.wp-block-gallery,
-    //.wp-block-video,
-    .wp-block-video video
-    //.wp-block-quote,
-    //.wp-block-text-columns,
-   // .wp-block-button,
-    //.wp-block-cover-text,
-    //.wp-block-pullquote,
-    .alert_shortcode{
-        max-width: 768px;
-    }
-
-    .gutenberg-content > *,
-    .wp-block-table{
-        margin-left: auto;
-        margin-right: auto;
-    }
-
-    .gutenberg-content .alignwide > img{
-        margin-left: auto;
-        margin-right: auto;
-    }
-
-    .wp-block-gallery.alignfull{ justify-content: center; }
-}
-
-@media #{$breakpoint-lg} {
-    .gutenberg-content *.alignwide{ max-width: 900px; }
-}
-
-@media #{$breakpoint-xlg} { 
-    .gutenberg-content .alignwide{ max-width: 1200px; }
-}
-
 /*
 * wp-block-columns
 */
 .wp-block-columns{ display: block; }
 
-@media #{$breakpoint-sm} {
+@media #{$breakpoint-md} {
     .wp-block-columns{
         display: grid;
         grid-gap: 0 1.5rem;
@@ -170,3 +111,6 @@
         margin-bottom: 0 !important;
     }
 }
+
+.first-mt0 > :first-child{ margin-top: 0 !important; }
+.last-mb0 > :first-child{ margin-top: 0 !important; }
